objects/zqu__QuoteAmendment__c.object
<CustomObject>
    <description>QuoteAmendment is used to make changes to a Quote.</description>
    <fields>
        <fullName>zqu__AutoRenew__c</fullName>
        <description>Whether the amended subscription is automatically renewed, or expires at the end of the term.</description>
        <inlineHelpText>Whether the amended subscription is automatically renewed, or expires at the end of the term.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <inlineHelpText>Delta Monthly Recurring Revenue for this amendment</inlineHelpText>
        <label>DeltaMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <inlineHelpText>Delta Total Contract Value for this Amendment</inlineHelpText>
        <label>DeltaTCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>As a change log, a part of Amendment</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__InitialTerm__c</fullName>
        <description>The initial term of the amended subscription.</description>
        <inlineHelpText>The initial term of the amended subscription.</inlineHelpText>
        <label>Initial Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteAmendmentZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Amendment Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The identification for the Quote that is being amended.</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Amendments</relationshipLabel>
        <relationshipName>Quote_Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalSetting__c</fullName>
        <label>Renewal Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RenewalTerm__c</fullName>
        <description>The renewal term of the amended subscription.</description>
        <inlineHelpText>The renewal term of the amended subscription.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The status of the amendment.
Draft is for when it is going to be pending for a while. Draft is also used temporarily in the code while making changes before making the amendment active. Active is for when it is going to be put into effect immediately. An amendment can be deleted at any point before it becomes active.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PendingAcceptance</fullName>
                </value>
                <value>
                    <fullName>PendingActivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <description>The date when the new terms and conditions take effect.</description>
        <inlineHelpText>The date when the new terms and conditions take effect.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TermType__c</fullName>
        <description>The term type of the amended subscription.</description>
        <inlineHelpText>The term type of the amended subscription.</inlineHelpText>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <description>The type of amendment that is being made.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>NewProduct</fullName>
                </value>
                <value>
                    <fullName>RemoveProduct</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>TermsAndConditions</fullName>
                </value>
                <value>
                    <fullName>UpdateProduct</fullName>
                </value>
                <value>
                    <fullName>NewSubscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Amendment</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>zqu__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zqu__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Amendment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>